--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -42,11 +42,6 @@ text-align: left;
     transition: color 0.3s ease;
   }
   
-  /* .navbar-item a:hover {
-    color: #ddd;
-  } */
-  
-  /* Responsive styling */
   @media (max-width: 768px) {
     .navbar-menu {
       display: none;
@@ -58,13 +53,14 @@ text-align: left;
       position: absolute;
       top: 60px;
       right: 20px;
-      background-color: #333;
-      padding: 20px;
+      background: #D9D9D9;
+      z-index: 1000;
+      padding: 10px 20px;
       border-radius: 5px;
     }
   
     .navbar-item {
-      margin: 10px 0;
+      margin: 5px 0;
     }
   }
   
@@ -79,7 +75,7 @@ text-align: left;
     width: 25px;
     height: 3px;
     margin: 5px;
-    background-color: white;
+    background-color: rgb(44, 40, 40);
     transition: all 0.3s ease;
   }
   
@@ -87,5 +83,12 @@ text-align: left;
     .menu-toggle {
       display: block;
     }
+    .navbar-item a {
+      color: #000000;
+  
+      font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+}
   }
   
