--- a/src/Component/Owl/Owl.css
+++ b/src/Component/Owl/Owl.css
@@ -1,6 +1,6 @@
 
 .background-img{
-    background-image: url(../imges/image3.png);
+    background-image: url(../images/image3.png);
     width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
@@ -21,83 +21,22 @@
     z-index: 1;
    
 }
-/* .ool-image {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }  */
+
 
   .position-r{
     position: relative;
   }
 
-  /* .position-ab-le{
-      position: absolute;
-      left: 40%;
-      bottom: 28%;
-      width: 90px;
-      height: 90px;
-  }
-
-  .position-ab-ri{
-    position: absolute;
-    left: 52%;
-    bottom: 30%;
-    width: 90px;
-      height: 90px;
-} */
-/* .owl-eat{
-    width: 130px;
-    height: 130px;
-    /* background-color: blue; */
-   
-/*    
-    animation: bounce 1s infinite; 
-} */
+  
 
 .img-w {
   transition: transform 0.2s;
 }
 
-/* .img-w.bounce {
-  animation: bounce 0.6s;
-} */
-
-/* @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
-  }
-} */
-
-/* @keyframes bounce {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
-  }
-}
-
-
-.bounce {
-  animation: bounce 1s infinite;
-} */
-
-
 
 .owl-eat {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   /* background-color: #4CAF50; */
  
   position: absolute;
@@ -341,8 +280,8 @@ background: #D9D9D9;
 }
 
 .owl-eat {
-  width: 80px;
-  height: 80px;
+  width: 150px;
+  height: 140px;
   
 }
 .position-ab-le-next {
@@ -350,3 +289,7 @@ background: #D9D9D9;
   bottom: 15%;
 }
     }
+
+
+
+    
